--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-node_modules/
-public/
-.zanata-cache/etag-cache.xml
-npm-debug.log
-/zanata.xml
-pnpm-lock.yaml
-tools/backup/
-tools/tmp/
+# Ignore dummyapp folder
+/gsdk/dummyapp
